--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="content/css/project-detail.css">
+
 <div>
     <!-- old background color: #00b3ee-->
     <div class="col-md-2" style="background-color: #589BBE; height: 5000px">
@@ -27,10 +29,12 @@
     </div>
     <!-- old background color: #abb0a4-->
     <div class="col-md-7" style="background-color: white; height: 5000px">
+        <jhi-alert></jhi-alert>
         <row>
             <div>
                 <h2><span>Project</span> {{vm.project.id}}</h2>
                 <hr>
+                <jhi-alert-error></jhi-alert-error>
                 <dl class="row jh-entity-details">
                     <dt><span>Name</span></dt>
                     <dd>
@@ -53,30 +57,18 @@
                     </dd>
                     <dt><span>Project Member</span></dt>
                     <dd>
-                        <div class="panel-group" id="accordionpmember">
-                            <div class="panel panel-default" ng-repeat="pmember in vm.project.pmembers">
-                                <div class="panel-heading">
-                                    <p class="panel-title btn btn-primary" data-toggle="collapse" data-parent="#accordionpmember" data-target="#pmemberid{{pmember.id}}">
-                                        <a data-toggle="collapse" data-parent="#accordionpmember" data-target="#pmemberid{{pmember.id}}">
-                                        {{pmember.login}}
-                                        </a>
-                                    </p>
-                                </div>
-                                <div id="pmemberid{{pmember.id}}" class="panel-collapse collapse">
-                                    <div class="panel-body">
-                                        {{pmember.login}}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <span ng-repeat="pmember in vm.project.pmembers">
+                            {{pmember.login}}{{$last ? '' : ', '}}
+                            <br>
+                        </span>
                     </dd>
                 </dl>
-                <button type="button" ui-sref="project-detail.edit({id:vm.project.id})" class="btn btn-primary">
+                <button type="button" ui-sref="project-detail.edit({id:vm.project.id})" class="edit-project-btn">
                     <span class="glyphicon glyphicon-pencil"></span>
                     <span class="hidden-sm-down"> Edit</span>
                 </button>
 
-                <button type="button" ui-sref="project-detail.addmember({id:vm.project.id})" class="btn btn-primary">
+                <button type="button" ui-sref="project-detail.addmember({id:vm.project.id})" class="add-member-btn">
                     <span class="glyphicon glyphicon-pencil"></span>
                     <span class="hidden-sm-down"> Add Member</span>
                 </button>
@@ -168,7 +160,8 @@
                             <button type="submit"
                                     ui-sref="userstory.edit({id:userstory.id})"
                                     class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"></span>
+                                <span class="glyphicon glyphicon-pencil"><
+                                /span>
                                 <span class="hidden-sm-down"></span>
                             </button>
                             <button type="submit"
