Bug fix to remove span tag from view

--- a/src/main/webapp/app/entities/project/project-detail.html
+++ b/src/main/webapp/app/entities/project/project-detail.html
@@ -160,8 +160,7 @@
                             <button type="submit"
                                     ui-sref="userstory.edit({id:userstory.id})"
                                     class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"><
-                                /span>
+                                <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-sm-down"></span>
                             </button>
                             <button type="submit"
