--- a/src/main/webapp/app/entities/requirement/requirement-detail.html
+++ b/src/main/webapp/app/entities/requirement/requirement-detail.html
@@ -7,7 +7,7 @@
     </div>
     <hr>
     <jhi-alert-error></jhi-alert-error>
-    <div class="requirement-detail-container">
+    <div class="detail-container">
         <div class="name-container">
             <div class="name-label">
                 Name:
@@ -38,7 +38,7 @@
             Back
         </button>
 
-        <button type="button" ui-sref="requirement-detail.edit({id:vm.requirement.id})" class="edit-requirements-btn">
+        <button type="button" ui-sref="requirement-detail.edit({id:vm.requirement.id})" class="edit-btn">
             Edit
         </button>
     </div>
