--- a/src/main/webapp/app/entities/issue/issues.html
+++ b/src/main/webapp/app/entities/issue/issues.html
@@ -1,14 +1,12 @@
-<div style="background-color: #FFFFFF">
+<link rel="stylesheet" href="content/css/issues.css">
+<div style="background-color: transparent">
     <h2>Issues</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="issue.new" >
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <span class="hidden-xs-down" >
-                        Create new Issue
-                    </span>
+                <button class="add-issue-btn" style="border-color: white; color: white" ui-sref="issue.new" >
+                    Create new Issue
                 </button>
             </div>
             <div class="col-xs-8 no-padding-right">
@@ -35,14 +33,14 @@
         <table class="jh-table table table-striped">
             <thead>
                 <tr>
-                    <th><span>ID</span></th>
-                    <th><span>Name</span></th>
-                    <th><span>Comments</span></th>
-                    <th><span>Status</span></th>
-                    <th><span>Priority</span></th>
-                    <th><span>Project</span></th>
-                    <th><span>Userstory</span></th>
-                    <th></th>
+                    <th class="headers"><span class="headers">ID</span></th>
+                    <th class="headers"><span class="headers">Name</span></th>
+                    <th class="headers"><span class="headers">Comments</span></th>
+                    <th class="headers"><span class="headers">Status</span></th>
+                    <th class="headers"><span class="headers">Priority</span></th>
+                    <th class="headers"><span class="headers">Project</span></th>
+                    <th class="headers"><span class="headers">Userstory</span></th>
+                    <th class="headers"></th>
                 </tr>
             </thead>
             <tbody>
