--- a/src/main/webapp/app/entities/issue/issue-detail.html
+++ b/src/main/webapp/app/entities/issue/issue-detail.html
@@ -64,7 +64,7 @@
 
     </div>
     <div class="group-buttons">
-        <button type="submit" ui-sref="{{ vm.previousState }}" class="back-btn">
+        <button type="submit" ui-sref="project-detail({id:vm.issue.project.id})" class="back-btn">
             Back
         </button>
 
