--- a/src/main/webapp/app/entities/userstory/userstory-detail.html
+++ b/src/main/webapp/app/entities/userstory/userstory-detail.html
@@ -73,7 +73,7 @@
 
     </div>
     <div class="group-buttons">
-        <button type="submit" ui-sref="{{ vm.previousState }}" class="back-btn">
+        <button type="submit" ui-sref="project-detail({id: vm.userstory.project.id})" class="back-btn">
             Back
         </button>
 
