--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="col-md-10" style="background-color: white; height: 100%">
-            <h3 style="text-align: center; color: grey;">{{vm.account.firstName}}'s Dashboard</h3>
+            <h3 style="text-align: center; color: grey;">{{vm.account.login}}'s Dashboard</h3>
             <div class="dashboard">
                 <div class="current-projects">
                     <div class="projects-container">
