hot fix for styling issues

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,13 @@
     <link rel="stylesheet" href="content/css/home-screen.css">
     <link rel="stylesheet" href="content/css/entity-detail.css">
     <link rel="stylesheet" href="content/css/project-detail.css">
+    <link rel="stylesheet" href="content/css/userstories.css">
+    <link rel="stylesheet" href="content/css/userstory-detail.css">
+    <link rel="stylesheet" href="content/css/issue-detail.css">
+    <link rel="stylesheet" href="content/css/issues.css">
+    <link rel="stylesheet" href="content/css/requirements.css">
+    <link rel="stylesheet" href="content/css/requirement-detail.css">
+
     <!-- endbuild -->
 </head>
 <body ng-app="projectoneApp" ng-strict-di>
